--- a/AwesomeProject/app.json
+++ b/AwesomeProject/app.json
@@ -17,12 +17,14 @@
     "ios": {
       "supportsTablet": true
     },
-    "android": {
+    "android": { 
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "softwareKeyboardLayoutMode": "pan" 
       }
     },
+
     "web": {
       "favicon": "./assets/favicon.png"
     }
