--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.6",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-camera": "~13.2.1",
@@ -21,13 +23,17 @@
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-icons": "^4.10.1",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
